Bug 520487: Support URI-valued properties in SVG/SMIL. r=roc