content/smil/test/db_smilCSSFromTo.js
@@ -139,15 +139,12 @@ var _fromToTestLists = {
   URIsAndNone: [
     new AnimTestcaseFromTo("url(#idA)", "url(#idB)",
                            { fromComp: "url(\"" + document.URL + "#idA\")",
-                             toComp: "url(\"" + document.URL + "#idB\")"},
-                           "need support for URI values"),
+                             toComp: "url(\"" + document.URL + "#idB\")"}),
     new AnimTestcaseFromTo("none", "url(#idB)",
-                           { toComp: "url(\"" + document.URL + "#idB\")"},
-                           "need support for URI values"),
+                           { toComp: "url(\"" + document.URL + "#idB\")"}),
     new AnimTestcaseFromTo("url(#idB)", "inherit",
                            { fromComp: "url(\"" + document.URL + "#idB\")",
-                             toComp: "none"},
-                           "need support for URI values"),
+                             toComp: "none"}),
   ],
 };
 
@@ -331,7 +328,8 @@ var gFromToBundles = [
   new TestcaseBundle(gPropList.lighting_color,
                      [].concat(_fromToTestLists.color,
                                _fromToTestLists.colorFromInheritWhite)),
-  new TestcaseBundle(gPropList.marker, _fromToTestLists.URIsAndNone),
+  new TestcaseBundle(gPropList.marker, _fromToTestLists.URIsAndNone,
+                     "need support for 'marker' shorthand property"),
   new TestcaseBundle(gPropList.marker_end, _fromToTestLists.URIsAndNone),
   new TestcaseBundle(gPropList.marker_mid, _fromToTestLists.URIsAndNone),
   new TestcaseBundle(gPropList.marker_start, _fromToTestLists.URIsAndNone),
